--- a/_includes/comments/giscus.html
+++ b/_includes/comments/giscus.html
@@ -3,7 +3,7 @@
   (function () {
     const origin = 'https://giscus.app';
     const lightTheme = 'light';
-    const darkTheme = 'dark_dimmed';
+    const darkTheme = 'preferred_color_scheme';
 
     let initTheme = lightTheme;
     const html = document.documentElement;
