--- a/_includes/metadata-hook.html
+++ b/_includes/metadata-hook.html
@@ -1,1 +1,2 @@
 <!-- A placeholder to allow defining custom metadata -->
+<meta name="naver-site-verification" content=site.webmaster_verifications.naver />
