네이버 메타 위치변경

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -104,4 +104,5 @@
   {% endunless %}
 
   {% include metadata-hook.html %}
+  <meta name="naver-site-verification" content=site.webmaster_verifications.naver />
 </head>
