네이버 서치 직접작성으로 수정

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -104,5 +104,5 @@
   {% endunless %}
 
   {% include metadata-hook.html %}
-  <meta name="naver-site-verification" content=site.webmaster_verifications.naver />
+  <meta name="naver-site-verification" content="cd5da29d8b867b875cbb216f41ffea5eca7ffe00" />
 </head>
