--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -27,7 +27,7 @@ html {
 }
 
 body {
-  background: rgb(27, 27, 30);
+  background: var(--main-bg);
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
     env(safe-area-inset-bottom) env(safe-area-inset-left);
   color: var(--text-color);
