헤딩 색깔 변경

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -40,6 +40,17 @@ body {
 @for $i from 1 through 5 {
   h#{$i} {
     @extend %heading;
+    $colors: (
+      1: #ff6b6b, // h1: 빨간색
+      2: #f9a825, // h2: 주황색
+      3: #8bc34a, // h3: 초록색
+      4: #03a9f4, // h4: 파란색
+      5: #ab47bc, // h5: 보라색
+      6: #9e9e9e  // h6: 회색
+    );
+
+    color: map-get($colors, $i);
+
 
     @if $i > 1 {
       @extend %anchor;
