--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -13,6 +13,12 @@
   --text-muted-color: #757575;
   --text-muted-highlight-color: inherit;
   --heading-color: #2a2a2a;
+  --h1-color: #ff6b6b; // h1: 빨간색
+  --h2-color: #f9a825; // h2: 주황색
+  --h3-color: #8bc34a; // h3: 초록색
+  --h4-color: #03a9f4; // h4: 파란색
+  --h5-color: #ab47bc; // h5: 보라색
+  --h6-color: #9e9e9e; // h6: 회색
   --label-color: #585858;
   --blockquote-border-color: #eeeeee;
   --blockquote-text-color: #757575;
