--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -45,7 +45,7 @@ body {
       2: #8bc34a, // h3: 초록색
       3: #03a9f4, // h4: 파란색
       4: #ab47bc, // h5: 보라색
-      5: #9e9e9e  // h6: 회색
+      5: #9e9e9e,  // h6: 회색
       6: #ff6b6b, // h1: 빨간색
     );
 
